# hua-agent

./: .coverage  .env.example  .gitignore  API.md  CLAUDE.md  PROJECT_SUMMARY.md  README.md  pyproject.toml
.github/workflows/: test.yml
hua_agent/: __init__.py  app.py  auth.py  config.py  db.py  image_utils.py  main.py  middleware.py  models.py  obs_client.py  schemas.py  server.py  spa.py  stage1_workflow.py
hua_agent/routes/: auth.py  chat.py  research.py
hua_agent/services/: flower_id.py  research.py
hua_agent/workflows/: stage1.py  stage2.py
tests/: conftest.py  test_api.py  test_auth.py  test_db.py  test_imports.py  test_main.py  test_models.py  test_security.py  test_workflows.py
